@@ -1,0 +1,232 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u777d\u9055\u5341\u5e74\uff012NE1\u91cd\u8fd4\u821e\u53f0\u72c2\u6380\u6b61\u547c\u8072\u3000\u4e9e\u6d32\u5de1\u8ff4\u6f14\u5531\u6703\u5373\u5c07\u5c55\u958b", "description": "\u777d\u9055\u5341\u5e74\uff012NE1\u91cd\u8fd4\u821e\u53f0\u72c2\u6380\u6b61\u547c\u8072\u3000\u4e9e\u6d32\u5de1\u8ff4\u6f14\u5531\u6703\u5373\u5c07\u5c55\u958b", "url": "https://www.famechos.me/news/\u777d\u9055\u5341\u5e74\uff012NE1\u91cd\u8fd4\u821e\u53f0\u72c2\u6380\u6b61\u547c\u8072\u3000\u4e9e\u6d32\u5de1\u8ff4\u6f14\u5531\u6703\u5373\u5c07\u5c55\u958b/", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-08T12:15:02.697126+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/睽違十年！2NE1重返舞台狂掀歡呼聲　亞洲巡迴演唱會即將展開/"/>
+<meta name="description" content="睽違十年！2NE1重返舞台狂掀歡呼聲，亞洲巡迴演唱會即將展開。睽違十年的等待，終於迎來了2NE1的歸來！">
+
+<meta name="keywords" content="2NE1, 亞洲巡迴演唱會, 歡呼聲, 睽違十年, 重返舞台, KPOP, 演唱會">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/睽違十年！2NE1重返舞台狂掀歡呼聲　亞洲巡迴演唱會即將展開/" />
+        <meta property="og:title" content="睽違十年！2NE1重返舞台狂掀歡呼聲　亞洲巡迴演唱會即將展開" />
+        <meta property="og:description" content="睽違十年！2NE1重返舞台狂掀歡呼聲　亞洲巡迴演唱會即將展開" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="睽違十年！2NE1重返舞台狂掀歡呼聲　亞洲巡迴演唱會即將展開" />
+        <meta property="twitter:description" content="睽違十年！2NE1重返舞台狂掀歡呼聲　亞洲巡迴演唱會即將展開" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2>K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2>J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2>影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2>其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <i class="bi bi-headset"></i>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <i class="bi bi-gear"></i>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+        </button>
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>睽違十年！2NE1重返舞台狂掀歡呼聲　亞洲巡迴演唱會即將展開</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-POP</p>
+          <p class="news-date">25/9/2099</p>
+        </div>
+	<p>星期日晚上，「Come Back Home」的歌聲響遍奧林匹克公園的奧林匹克廳，引起粉絲們的狂熱歡呼，標誌著2NE1這個傳奇的韓國流行音樂女子組合在十多年後首次重返舞台。</p>
+<p>組合成員Dara、李彩琳、朴春和孔敏智，以她們一貫的獨特風格，穿著令人眼花繚亂的服裝，令粉絲們大飽眼福。李彩琳穿著一件醒目的紅色夾克，胸前綁著一條大紅絲帶，而Dara則穿著一件肩膀特別寬大的大衣。</p>
+<p>當她們開始演唱「Welcome Back」時，這是她們三場演唱會的最後一場——另外兩場是「Come Back Home」和「Fire」——許多忠實的粉絲，包括被稱為Blackjack的組合粉絲，都感動得流下淚來。</p>
+<p>Dara說：「好久不見了，Blackjack！如果你們準備好聽下一首歌，就喊出『Let's play』吧！」鼓勵著台下的粉絲。</p>
+<p>舞台和觀眾席之間的距離，令演唱會的氣氛更加濃厚。儘管相隔多年，這個四人組仍然表現出強大的力量，重新演繹了經典歌曲，如「Can't」、「Falling In Love」和「I Don't Care」。舞蹈動作激烈，需要的能量遠遠超過今天的一些韓國流行音樂女子組合。</p>
+<p>最年輕的成員孔敏智，在過去常常被其他成員的才華所掩蓋，但這次她卻展現出真正突出的歌唱和舞蹈能力。</p>
+<p>演唱會的第一部分結束後，包括李知恩、뉴진스、Ive、Twice、에스파和Stray Kids在內的主要韓國流行音樂藝術家，通過影片向2NE1的15週年演唱會表示祝賀。</p>
+<p>李彩琳隨後以個人演唱「The Baddest Female」和「MTBD」來吸引觀眾，穿著一件長白色毛皮大衣，在台上揮灑自如，然後戲劇性地將大衣拋開。</p>
+<p>在下一個部分，2NE1穿著黑色服裝，演唱了包括「Missing You」、「It Hurts」、「If I Were You」和「Lonely」在內的感人情歌。</p>
+<p>一個懷舊的影片蒙太奇展示了2NE1在2008年成為韓國流行音樂偶像之前的努力，以及她們自2009年出道以來的旅程。演唱會在她們的熱門歌曲「I Am the Best」的爆炸性表演中達到高潮。觀眾席上爆發出激動的氣氛，大家一起唱歌跳舞，而組合成員則穿過人群，與粉絲們近距離接觸。</p>
+<p>Dara說：「這個場地對我們來說很特別，因為我們在這裡舉行了第一次演唱會。能夠在一起慶祝我們的15週年，也是非常特別的。」</p>
+<p>朴春補充道：「我們非常感謝大家在我們準備這次演唱會時給予的愛和支持。能夠終於為大家表演，我們感到非常高興。」</p>
+<p>Dara繼續說：「我知道大家一定覺得等待的時間太長了，但謝謝大家的耐心。十年後第一次見面，令我們回憶起美好的時光。」</p>
+<p>李彩琳說：「我們希望通過這次演唱會，能夠喚起大家的懷舊感，展現出經典的2NE1演唱會的樣子。我們感受到大家的正能量，我們希望大家也能夠感受到。」</p>
+<h2>亞洲巡迴演唱會：2NE1 登場</h2>
+<p>最近，Dara 透露了未來的計劃，表示最初只打算舉行一天的演唱會，但門票銷售速度太快，因此額外增加了兩天。至於是否應該考慮舉行安可演唱會？她表示會嘗試預訂更大的場地舉行。</p>
+<p>2NE1 現在準備在亞洲展開巡迴演唱會，計劃在九個城市舉行 15 場演唱會。首場演唱會將於 11 月 16 日在馬尼拉舉行。</p>
+
+<div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/4SDgFlmvAjY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p class="related-vid-text">相關影片：</p>
+</div>
+
+<p class="news-text-inner">資料來源： Korea Herald</p>
+</div>
+</div>
+</main>
+
+
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
