@@ -72,4 +72,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/睽違十年！2NE1重返舞台狂掀歡呼聲　亞洲巡迴演唱會即將展開/</ns0:loc>
+    <ns0:lastmod>2024-10-08T12:15:12+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
