@@ -42,3 +42,4 @@ https://www.koreaherald.com/view.php?ud=20241004050494
 https://www.koreaherald.com/view.php?ud=20241004050492
 https://www.koreaherald.com/view.php?ud=20241004050493
 https://www.koreaherald.com/view.php?ud=20241007050694
+https://www.koreaherald.com/view.php?ud=20241007050635
